[package]
name = "flowy-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.30"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.67"
wasm-bindgen-test = "0.3.25"
tokio = { version = "1.11.0", features = ["sync"] }

[features]
default = ["web"]
web = []




